// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTooltip customize 1`] = `
<div>
  <a
    aria-describedby=":r1:"
    class="link"
  >
    Test
  </a>
</div>
`;

exports[`loads and displays CxTooltip component 1`] = `
<div>
  <a
    class=""
  >
    Test
  </a>
</div>
`;
